# EncounterMaster

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Creature.cpp  Creature.h  CreatureEdit.cpp  CreatureEdit.h  CreatureList.cpp  CreatureList.h  Download.cpp  Download.h  Encounter.cpp  Encounter.h  EncounterEdit.cpp  EncounterEdit.h  EncounterMaster.cpp  Menu.cpp  Menu.h  README.md  creature_mirrors.txt  icon.rc  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake.yml
